--- a/Aufgabe_03/stylesheet.css
+++ b/Aufgabe_03/stylesheet.css
@@ -19,7 +19,7 @@ font-family: American Typewriter;
 width:95%;
 color:#000000;
 }
-img { height:500px;
+img { height:100%;
 width:35%;
 border-style:groove;
 border-color:#000000;
