--- a/Aufgabe_03/stylesheet.css
+++ b/Aufgabe_03/stylesheet.css
@@ -1,6 +1,6 @@
 body 
 
-{background-color:#691010
+{background-color:#eeeaea
 }
 p 
 {font-size: 2em;
@@ -8,7 +8,7 @@ font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 color:#000000;
 }
 
-section {background-color:#691010;
+section {background-color:#eeeaea;
 font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 width:90%;
 color:#000000;
