--- a/Aufgabe_03/stylesheet.css
+++ b/Aufgabe_03/stylesheet.css
@@ -15,12 +15,12 @@ color:#000000;
 }
 
 article {background-color:#f8f7f7;
-font-family: American Typewriter;
+font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 width:95%;
 color:#000000;
 }
 img { height:100%;
-width:35%;
+width:50%;
 border-style:groove;
 border-color:#000000;
 border-width:medium;
