--- a/Aufgabe_03/stylesheet.css
+++ b/Aufgabe_03/stylesheet.css
@@ -14,7 +14,7 @@ width:90%;
 color:#000000;
 }
 
-article {background-color:#f8f7f7;
+article {background-color:#ffffff;
 font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 width:95%;
 color:#000000;
