--- a/Aufgabe_03/stylesheet.css
+++ b/Aufgabe_03/stylesheet.css
@@ -8,7 +8,12 @@ font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 color:#000000;
 }
 
-section {background-color:#eeeaea;
+{
+    h1 color: #9bOeOe;
+    front-size: 3em;
+}
+
+section {background-color:#ffffff;
 font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 width:90%;
 color:#000000;
