--- a/Aufgabe_03/stylesheet.css
+++ b/Aufgabe_03/stylesheet.css
@@ -1,26 +1,24 @@
 body 
 
-{background-color:#eeeaea
+{background-color:#ffffff
 }
 p 
 {font-size: 2em;
-font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+font-family:Cambria, Cochin, , Times, 'Times New Roman', serif;
 color:#000000;
 }
 
-{
-    h1 color: #9bOeOe;
-    front-size: 3em;
-}
+h1 {color: #9bOeOe;
+    front-size: 3em;}
 
 section {background-color:#ffffff;
-font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+font-family:Cambria, Cochin, ia, Times, 'Times New Roman', serif;
 width:90%;
 color:#000000;
 }
 
-article {background-color:#ffffff;
-font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+article {background-color:#d4d4d4;
+font-family: Cambria, Cochin, , Times, 'Times New Roman', serif;
 width:95%;
 color:#000000;
 }
