--- a/Aufgabe_03/stylesheet.css
+++ b/Aufgabe_03/stylesheet.css
@@ -11,6 +11,9 @@ color:#000000;
 h1 {color: #9bOeOe;
     front-size: 3em;}
 
+h5 {front-size:2em;}
+
+
 section {background-color:#ffffff;
 font-family:Cambria, Cochin, ia, Times, 'Times New Roman', serif;
 width:90%;
