--- a/Aufgabe_03/stylesheet.css
+++ b/Aufgabe_03/stylesheet.css
@@ -10,9 +10,11 @@ color:#000000;
 
 h1 {color: #9bOeOe;
     font-size: 3em;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ;
 }
 
 h5 {font-size: 2em;}
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ;
 
 
 section {background-color:#ffffff;
