--- a/Aufgabe_03/stylesheet.css
+++ b/Aufgabe_03/stylesheet.css
@@ -8,12 +8,12 @@ font-family:Cambria, Cochin, , Times, 'Times New Roman', serif;
 color:#000000;
 }
 
-h1 {color: #9bOeOe;
+h1 {color=red;
     font-size: 3em;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ;
 }
 
-h5 {font-size: 2em;}
+h5 {font-size: 1em;}
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ;
 
 
