--- a/Aufgabe_03/stylesheet.css
+++ b/Aufgabe_03/stylesheet.css
@@ -8,13 +8,11 @@ font-family:Cambria, Cochin, , Times, 'Times New Roman', serif;
 color:#000000;
 }
 
-h1 {color=red;
+h1 {color:#691010;
     font-size: 3em;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ;
 }
 
-h5 {font-size: 1em;}
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ;
 
 
 section {background-color:#ffffff;
