--- a/Aufgabe_03/stylesheet.css
+++ b/Aufgabe_03/stylesheet.css
@@ -8,9 +8,10 @@ font-family:Cambria, Cochin, , Times, 'Times New Roman', serif;
 color:#000000;
 }
 
-h1 {color:#691010;
+h1 {;
     font-size: 3em;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ;
+    color:#691010;
 }
 
 
