--- a/Aufgabe_04/stylesheet3.css
+++ b/Aufgabe_04/stylesheet3.css
@@ -10,7 +10,7 @@ color:#000000;
 }
 
 
-title {;
+h1 {;
     font-size: 4em;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ;
     color:#691010;  
@@ -21,11 +21,6 @@ title {;
 h5 { font-size: 2em;
     text-align: center;
 }
-#mainnav {
-    
-    
-}
-
 
 
 ul {
