--- a/Aufgabe_04/stylesheet3.css
+++ b/Aufgabe_04/stylesheet3.css
@@ -22,14 +22,21 @@ h2 { font-size: 2em;
     text-align: center;
 }
 
-div {
-    width: 320px;
-    padding: 10px;
-    border: 5px solid gray;
-    margin: 0;
-  }
-
+.subCCs {
+    background-color: #000000;
+    width: 13em;
+    height: 20em;
+    border: 1px solid #ffffff;
+    overflow: hidden;
+    float: left;
+    clear: right;
+    padding: 0.1em;
+    margin-left: 0.2em;
+    margin-right: 0.2em;
+    margin-bottom: 0.2em;
+    margin-top: 0.2em
 }
+
 
 section {background-color:#ffffff;
 font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
@@ -53,11 +60,3 @@ border-width:small
 }
 
     
-}
-img { height:100%;
-width:50%;
-border-style:groove;
-border-color:#000000;
-border-width:small
-}
-
