--- a/Aufgabe_04/stylesheet3.css
+++ b/Aufgabe_04/stylesheet3.css
@@ -4,18 +4,27 @@ body
     overflow: none }
 
 p 
-{font-size: 2em;
+
+{font-size: 1em;
+    float: left 
 font-family:Cambria, Cochin, , Times, 'Times New Roman', serif;
 color:#000000;
 }
 
 
+
+
 h1 {;
-    font-size: 1em;
+    font-size: 4em;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ;
     color:#691010;  
     text-align: center;
     margin-top: 0px;     
+}
+
+ul {
+    float: right
+    
 }
 
 h2 { font-size: 2em;
@@ -33,11 +42,13 @@ h2 { font-size: 2em;
    
 }
 
+
+
 .subCCs {
-    background-color: #000000;
-    width: 30em;
+    background-color: #ffffff;
+    width: 60em;
     height: 20em;
-    border: 1px solid #ffffff;
+    border: 1px solid #000000;
     overflow: hidden;
     float: left;
     clear: right;
@@ -69,5 +80,3 @@ border-style:groove;
 border-color:#000000;
 border-width:small
 }
-
-    
