--- a/Aufgabe_04/stylesheet3.css
+++ b/Aufgabe_04/stylesheet3.css
@@ -1,7 +1,6 @@
-/*stylesheet5.css*/
 html {
     background-color: #000000;
-    font-family: dubai;
+    font-family: Cambria;
     font-size: 1em;
   }
   
@@ -132,7 +131,7 @@ html {
        font-family: Caviar Dreams;
        color: #000000;
        text-align: left;
-       background-color:#A37739;  
+       background-color:#ffffff;  
   
    }
   
