--- a/Aufgabe_04/stylesheet3.css
+++ b/Aufgabe_04/stylesheet3.css
@@ -55,7 +55,7 @@ html {
   }
   
   .CC {
-      background-color: #120c0c;
+      background-color: #000000;
       width: 53em;
       height:30em;
       border: 1px solid #ffffff;
@@ -144,7 +144,7 @@ html {
       font-family: Caviar Dreams bold;
       color: #ffffff;
       text-align: center;
-      background-color:#A37739;
+      background-color:#ff0000;
       
    } 
   main{
@@ -160,7 +160,7 @@ html {
     }
 
   footer {
-      background-color: #A37739;
+      background-color: #ff0000;
       text-align: center;
       font-family: caviar dreams bold;
       font-size: 15pt;
