--- a/Aufgabe_04/stylesheet3.css
+++ b/Aufgabe_04/stylesheet3.css
@@ -55,7 +55,7 @@ html {
   }
   
   .CC {
-      background-color: #000000;
+      background-color: #120c0c;
       width: 53em;
       height:30em;
       border: 1px solid #ffffff;
@@ -88,7 +88,7 @@ html {
   }
   .emgp:hover {
       width: 100%;
-      height: 106%;
+      height: 107%;
   }
   
   .arti0 {
@@ -160,10 +160,10 @@ html {
     }
 
   footer {
-      background-color: #ff0000;
+      background-color: #ffffff;
       text-align: center;
       font-family: caviar dreams bold;
-      font-size: 17pt;
+      font-size: 15pt;
       margin-top:85em;
       width: 100%;
   }
