--- a/Aufgabe_05/stylesheet2.css
+++ b/Aufgabe_05/stylesheet2.css
@@ -1,232 +1,188 @@
-*{    background-color:#e5e5e5;}
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/html">
+<head>
+    <meta charset="UTF-8">
+    <name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <title> Katzenpension </title>
+</head>
+<header>
+    <nav role="navigation">
+        <div id="menuToggle">
 
-body
-{
-   
-}
+            <input type="checkbox"/>
 
-a
-{
-    text-decoration: none;
-    color: #232323;
+            <span></span>
+            <span></span>
+            <span></span>
 
-    transition: color 0.3s ease;
-}
+            <ul id="menu">
+                <a href="#">
+                    <li>Wildkatzen</li>
+                </a>
+                <a href="#">
+                    <li>Hauskatzen</li>
+                </a>
+                <a href="#">
+                    <li>Streunerkatzen</li>
+                </a>
+                <a href="#">
+                    <li>Babykatzen</li>
+                </a>
+                <a href="#">
+                <li>Bengalkatze</li>
+                </a>
+                <a href="#">
+                    <li>Kontakt</li>
+                </a>
+            </ul>
+        </div>
+    </nav>
+</header>
 
-a:hover
-{
-    color: #ff001e;
-}
+<body style="font-family:Verdana;color:#aaaaaa;">
 
-#menuToggle
-{
-    display: block;
-    position: relative;
-    top: 50px;
-    left: 50px;
+<div style="background-color:#e5e5e5;padding:15px;text-align:center;">
+    <h1>Katzenpension</h1>
+</div>
 
-    z-index: 1;
+<div style="overflow:auto">
+    <div class="left">
+        ...<br>
+        ...<br>
 
-    -webkit-user-select: none;
-    user-select: none;
-}
-
-#menuToggle input
-{
-    display: block;
-    width: 40px;
-    height: 32px;
-    position: absolute;
-    top: -7px;
-    left: -5px;
-
-    cursor: pointer;
-
-    opacity: 0; /* hide this */
-    z-index: 2; /* and place it over the hamburger */
-
-    -webkit-touch-callout: none;
-}
-
-/*
- * Just a quick hamburger
- */
-#menuToggle span
-{
-    display: block;
-    width: 33px;
-    height: 4px;
-    margin-bottom: 5px;
-    position: relative;
-
-    background: #cdcdcd;
-    border-radius: 3px;
-
-    z-index: 1;
-
-    transform-origin: 4px 0px;
-
-    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-    background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-    opacity 0.55s ease;
-}
-
-#menuToggle span:first-child
-{
-    transform-origin: 0% 0%;
-}
-
-#menuToggle span:nth-last-child(2)
-{
-    transform-origin: 0% 100%;
-}
-
-#menuToggle input:checked ~ span
-{
-    opacity: 1;
-    transform: rotate(45deg) translate(-2px, -1px);
-    background: #232323;
-}
+    </div>
 
 
-#menuToggle input:checked ~ span:nth-last-child(3)
-{
-    opacity: 0;
-    transform: rotate(0deg) scale(0.2, 0.2);
-}
+    <div style="overflow:auto">
+        <div class="left">
+        
+        </div>
+
+        <div class="maina">
+            <h2>  </h2>
+            <div id="gal">
+                <a tabindex="0" href="#a1"><img src=" " /> </a>
+                <a tabindex="0" href="#a2"><img src="cat2.jpg" /> </a>
+                <a tabindex="0" href="#a3"><img src="cat3.jpg"/> </a>
+                <a tabindex="0" href="#a4"><img src="cat4.jpg" /> </a>
+                <a tabindex="0" href="#a5"><img src="cat8.jpg"/> </a>
 
 
-#menuToggle input:checked ~ span:nth-last-child(2)
-{
-    transform: rotate(-45deg) translate(0, -1px);
-}
-
-#menu
-{
-    position: absolute;
-    width: 300px;
-    margin: -100px 0 0 -50px;
-    padding: 125px 50px 50px;
-
-    background: #ededed;
-    list-style-type: none;
-    -webkit-font-smoothing: antialiased;
-
-    transform-origin: 0% 0%;
-    transform: translate(-100%, 0);
-
-    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
-}
-
-#menu li
-{
-    padding: 10px 0;
-    font-size: 22px;
-}
 
 
-#menuToggle input:checked ~ ul
-{
-    transform: none;
-}
 
 
-.left {
-    float: left;
-    width:20%;
-    padding:15px;
-    margin-top:7px;
-    text-align:center;
-
-}
-
-.main {
-    float:left;
-    width:60%;
-    margin-left: auto;
-    margin-right: auto;
-
-}
-.right {
-    float:right;
-    width:20%;
-    padding:15px;
-    margin-top:7px;
-    text-align:center;
-}
-
-@media only screen and (max-width:620px) {
-    /* For mobile phones: */
-    .menu, .main, .right {
-        width:100%;
-    }
-}
-
-#gal {
-    width:400px;
-    overflow:hidden;
-    border:0;
-    display: block;
-    margin-left: auto;
-    margin-right: auto
-}
-#gal #ausgabe {
-    width:2000px;
-    float:left;
-    position:relative;left:0;
-    -moz-transition: 1s;
-    -o-transition: 1s;
-    -webkit-transition: 1s;
-}
-
-#gal a {
-    position:relative;
-    float:left;
-}
+                <div id="ausgabe">
+                    <img src="cat.jpg"/>
+                    <img src="cat2.jpg"/>
+                    <img src="cat3.jpg"/>
+                    <img src="cat4.jpg"/>
+                    <img src="cat8.jpg"/>
 
 
-#gal a + a + a + a + a img {
-    margin-right: 0;
-    width:80px;
-    height:59px;
-}
-#gal img {
-    width:400px;
-    float:left;
+                </div>
+            </div>
+        </div>
 
-}
+    <div class="main">
+        <aside>
+        <section0 class="texte">
+        <h2>Allgemeine Informationen zu Katzen</h2>
+        <p>Die Hauskatze ist die Haustierform der Falbkatze. Sie ist ein Fleischfresser und zählt zu den beliebtesten Heimtieren.
 
-#gal a img {
-    width:79px;
-    margin: 0 1px 1px 0;
-}
+            Umgangssprachlich wird das Wort Hauskatze für alle Katzen genutzt, die in mehr oder weniger direktem Kontakt mit Menschen leben. Die Fachsprache der Züchter und Zuchtverbände beschränkt den Begriff Hauskatze auf Tiere mit breiter Vielfalt von Wuchstypen und Fellfarben, die keiner bestimmten, durch gezielte und dokumentierte Züchtung entstandenen Katzenrasse angehören.
+            Die Merkmale der Hauskatze schwanken je nach Verbreitungsgebiet. Bei den gezüchteten Formen sind sie von den Rassestandards abhängig, bei den kulturfolgenden Hauskatzen unterliegen sie dem jeweiligen Selektionsdruck, der von den natürlichen Umweltbedingungen abhängt.
 
-#gal a:hover:before , #gal a:focus:before {
-    content:"";
-    position:absolute;
-    top:0;left:0;right:1px;bottom:1px;
-    background:#cdcdcd;
-}
+            Hauskatzen sind im Durchschnitt etwa 50 Zentimeter lang und 4 Kilogramm schwer mit einer großen Variationsbreite von ca. 2,5 kg bis ca. 8 kg. Männliche Tiere sind etwas größer als weibliche. Die Länge des Schwanzes beträgt etwa 25 bis 30 cm. Eine Ausnahme ist die schwanzlose Manx-Katze von der Insel Man. Die Schulterhöhe beträgt 30 bis 35 cm. In Verbreitungsgebieten mit kälterem Klima sind die Katzen allgemein schwerer und größer, in wärmeren Gebieten sind sie leichter. Die National Geographic Society (1981) gibt die durchschnittliche Kopf-Rumpf-Länge mehrerer beliebter Katzenrassen mit 46 cm und die Schwanzlänge mit 30 cm an. Der bisher schwerste dokumentierte Hauskater war der stark adipöse „Himmy“ aus Australien mit 21,2 kg
 
-#gal a:hover ~ #ausgabe , #gal a:focus ~ #ausgabe {
-    left:0;
-}
+        </p>
+    </section0>
+        </aside>
+    </div>
 
-#gal a + a:hover ~ #ausgabe , #gal a + a:focus ~ #ausgabe {
-    left:-400px;
-}
+    <div class="C">
+        <section1 class="texte">
+    <h2> Wildkatze </h2>
+    <p>
+        Europäische Wildkatze
+        Felis silvestris
+        Schulterhöhe: 35 bis 40 cm
+        Gewicht: 2,5 bis 8 kg
+        Lebensdauer: bis 15 Jahre
+        Lebensraum: große, ruhige, alte Wälder
+        Nahrung: Kleintiere, besonders Mäuse
+        Fortpflanzung: Hauptpaarungszeit im Februar; 2 bis 6 Junge nach etwa 10 Wochen; Aufzucht in alten Baumhöhlen
+        Verbreitung: ursprünglich Europa, Vorderasien; in Deutschland zeitweise fast ausgerottet; steigendes Vorkommen in Deutschland; gesichertes Vorkommen im Kellerwald
 
-#gal a + a + a:hover ~ #ausgabe , #gal a + a + a:focus ~ #ausgabe {
-    position:relative;
-    left:-800px;
-}
+    </p>
+<section1>
+</div>
+    <div class="C">
+        <section2 class="texte">
+        <h2> Hauskatze </h2>
+        <p>
+            Die Hauskatze ist keine Katzenrasse im eigentlichen Sinne. In den meisten Fällen werden die Katzen, die es in den unterschiedlichsten Wuchstypen und Farbvarianten gibt, der Rasse EKH (Europäisch Kurzhaar) zugeordnet. Ihre Abstammung haben Hauskatzen von den Wildkatzen. Sie haben sich im Verlauf der Evolution immer mehr an das Leben mit uns Menschen angepasst und sind heutzutage vollkommen domestiziert.
+        </p>
+        </section2>
+    </div>
 
-#gal a + a + a + a:hover ~ #ausgabe , #gal a + a + a + a:focus ~ #ausgabe {
-    position:relative;
-    left:-1200px;
-}
+        <div class="C">
+            <section6 class="texte">
+        <h2> Streunerkatze</h2>
+        <p>
+            In Großstädten, ländlichen Gegenden und in Gewerbegebieten streunen die Katzen auf der Suche nach Nahrung und Unterschlupf umher. All diese Katzen waren einmal Haustiere, die ausgesetzt und sich selbst überlassen wurden. In deutschen Haushalten leben über 12 Millionen Katzen, die von ihren Besitzern zumeist gut versorgt werden.
+        </p>
+            </section6>
+    </div>
 
-#gal a +  a + a + a + a:hover ~ #ausgabe , #gal a +  a + a + a + a:focus ~ #ausgabe {
-    position:relative;
-    left:-1600px;
-}
+        <div class="C">
+            <section3 class="texte">
+        <h2>Babykatze </h2>
+        <p>
+            Wer die Wahl hat, hat bekanntlich die Qual: „Eine Rassekatze oder einen echten Mischling? Vom qualifizierten Züchter oder lieber von privat?“
+            Viele Fragen, die Du Dir erst einmal durch den Kopf gehen lassen solltest, bevor Du Dich überstürzt hinreißen lässt, oder, weil gerade nach der Paarungszeit der Katzen – also im Frühjahr oder Herbst – ein Überangebot an jungen Kätzchen herrscht.
+            </section3>
+        </p>
+    </div>
+
+    <div class="C">
+        <section4 class="texte">
+        <h2> Bengalkatze </h2>
+        <p>
+            Die Bengal hat ein außergewöhnlich elegantes Fellmuster aus fein gezeichneten Rosetten (Kreisen). Es sieht einem Leopardenfell zum Verwechseln ähnlich! Auch wenn die Katze durch ihren schlanken Körper und dem hübschen Äußeren sehr anmutig wirkt: Sie ist alles andere als „etepetete“ (= zimperplich, geziert), sondern eher so etwas wie eine Leistungssportlerin unter den Katzen.
+        </p>
+        </section4>
+    </div>
+
+    <div>
+        <h2> </h2>
+        <p>
+
+        </p>
+    </div>
+
+        <div class="C">
+            <section5 class="texte">
+        <h2>Tiger</h2>
+        <p>
+            Der Tiger (Panthera tigris) ist eine in Asien verbreitete Großkatze. Er ist aufgrund seiner Größe und des charakteristischen dunklen Streifenmusters auf goldgelbem bis rotbraunem Grund unverwechselbar. Es gibt acht bis neun Unterarten, die als Festlandsunterarten und Inselunterarten unterschieden werden.
+
+        </p>
+            </section5>
+    </div>
+
+<footer>
+    <div class="right">
+        <h2>Kontakt</h2>
+        <p>Hochschule Furtwangen
+            Robert-Gerwig-Platz 1
+            78120 Furtwangen
+
+            E-Mail: angelina.weibert@hs-furtwangen.de</p>
+    </div>
+</footer>
+</div>
+</div>
+</body>
+</html>
