--- a/Aufgabe_05/stylesheet2.css
+++ b/Aufgabe_05/stylesheet2.css
@@ -3,7 +3,16 @@
 
 body
 {
-  
+    /*
+    margin: 0;
+    padding: 0;
+
+    background: #232323;
+    color: #cdcdcd;
+    font-family: "Avenir Next", "Avenir", sans-serif;
+
+     */
+}
 
 a
 {
@@ -58,7 +67,7 @@ a:hover
     margin-bottom: 5px;
     position: relative;
 
-    background: #ffffff;
+    background: #000000;
     border-radius: 3px;
 
     z-index: 1;
@@ -84,7 +93,7 @@ a:hover
 {
     opacity: 1;
     transform: rotate(45deg) translate(-2px, -1px);
-    background: #ffffff;
+    background: #000000;
 }
 
 
@@ -188,6 +197,26 @@ a:hover
         width:100%;
     }
 }
+
+
+div#wrapperHeader {
+    width:100%;
+    height;200px; /* height of the background image? */
+    text-align:center;
+}
+
+div#wrapperHeader div#header {
+    width:1000px;
+    height:200px;
+    margin:0 auto;
+}
+
+div#wrapperHeader div#header img {
+    width:1000px; /* the width of the logo image */
+    height:; /* the height of the logo image */
+    margin:0 auto;
+}
+
 
 #gal {
     width:400px;
