--- a/Aufgabe_05/stylesheet2.css
+++ b/Aufgabe_05/stylesheet2.css
@@ -207,13 +207,13 @@ div#wrapperHeader {
 
 div#wrapperHeader div#header {
     width:1000px;
-    height:200px;
+    height:550px;
     margin:0 auto;
 }
 
 div#wrapperHeader div#header img {
     width:1000px; /* the width of the logo image */
-    height:; /* the height of the logo image */
+    height:auto; /* the height of the logo image */
     margin:0 auto;
 }
 
