--- a/Aufgabe_05/stylesheet0.css
+++ b/Aufgabe_05/stylesheet0.css
@@ -14,8 +14,8 @@ body
      */
 }
 
-h1 {
-    color:##510E0E;
+h2 {
+    color:#800707;
     font-style: italic;
 }
 
@@ -53,7 +53,7 @@ a:hover
     top: -7px;
     left: -5px;
 
-    cursor: pointer;
+    cursor: crosshair;
 
     opacity: 0; /* hide this */
     z-index: 2; /* and place it over the hamburger */
@@ -146,7 +146,7 @@ a:hover
 
 .C {
     background-color: #ffffff;
-    width: 50%;
+    width: 100%;
     height: 8em;
     border: 1px solid #ffffff;
     overflow: hidden;
