--- a/Aufgabe_05/stylesheet0.css
+++ b/Aufgabe_05/stylesheet0.css
@@ -147,7 +147,7 @@ a:hover
 .C {
     background-color: #ffffff;
     width: 100%;
-    height: 8em;
+    height: 100%;
     border: 1px solid #ffffff;
     overflow: hidden;
     float: left;
