--- a/Aufgabe_05/stylesheet0.css
+++ b/Aufgabe_05/stylesheet0.css
@@ -206,7 +206,7 @@ a:hover
 
 div#wrapperHeader {
     width:100%;
-    height;200px; /* height of the background image? */
+    height:200px; /* height of the background image? */
     text-align:center;
 }
 
