--- a/L06_Server/CLIENT/stylesheet.css
+++ b/L06_Server/CLIENT/stylesheet.css
@@ -1,7 +1,7 @@
-@media screen and (max-width: 600px)
+@media screen and (max-width: 600px);
 
 body {
-    margin:2%};
+    margin-left: 2% }
 
 header{ grid-column: span ;
         text-align: center;}
@@ -15,7 +15,7 @@ header{ grid-column: span ;
 #form, #order {
     border: thin solid black;
     margin: 1em; margin-left: -5%;
-    padding: 1em;}
+    padding: 1em}
 
 
 #order { border: thin solid black;
@@ -23,20 +23,20 @@ header{ grid-column: span ;
          font-size: 15px;}  /* 10  Zusammenstellung erneut ansehen */
 
 #feuerw{ font-size: 25px;
-    text-align: center;}
+    text-align: center}
 
-form, select{ font-size: 17px; }
+form, select{ font-size: 17px }
 
-fieldset{ margin: 10px 5px; }
+fieldset{ margin: 10px 5px }
 
 
-text {font-family: "Avenir";}
-h1{ font-size: 45px, margin-top: 1%, text-allign: center;}
-h2 {font-size: 25px;margin-top: 1%; }
-h3 {font-size: 18px; text-align:center; font-style: italic; color: #7c7c7c;}
+text { font-family: "Avenir", serif}
+h1{ font-size: 45px; margin-top: 1%; text-align: center}
+h2 {font-size: 25px;margin-top: 1% }
+h3 {font-size: 18px; text-align:center; font-style: italic; color: #7c7c7c}
 
 p{ margin-top: -30px;
-    font-size: 20px;}
+    font-size: 20px}
 
 #section{ float: left;
             width: 38%;
