--- a/EIA2/Endabgabe-w20/CLIENT/stylesheet.css
+++ b/EIA2/Endabgabe-w20/CLIENT/stylesheet.css
@@ -99,27 +99,34 @@ p {
 }
 
 
+#loadedRockets {
+    margin-top: 2%;
+    margin-left:48%;
+    width: 15%;
+    text-align: center;
+}
+
 button {
     float: right;
     border: thin solid black;
-    font-size: 18px;
+    font-size: 15px;
 
 
     margin-top: 2%;
-    height: 50px;
-    width: 220px;
+    height: 40px;
+    width: 160px;
 }
 
-#buttonloeschen {
-    margin-right: 10%;
+#buttonloeschen,#buttonspeichern {
+    margin-left: 3%;
+    margin-right: 1.5%;
 }
 
-#buttonspeichern {
-    margin-right: 7.5%;
+#buttonimport, #buttonladen{
+    margin-right: 3%;
 }
 
 .button:hover {
     opacity: 0.5;
 }
-
 
