--- a/EIA2/Endabgabe-w20/CLIENT/stylesheet.css
+++ b/EIA2/Endabgabe-w20/CLIENT/stylesheet.css
@@ -101,20 +101,19 @@ p {
 
 #loadedRockets {
     margin-top: 2%;
-    margin-left:48%;
-    width: 15%;
+    margin-left:45%;
+    width: 10%;
     text-align: center;
 }
 
 button {
     float: right;
     border: thin solid black;
-    font-size: 15px;
-
+    font-size: 16px;
 
     margin-top: 2%;
-    height: 40px;
-    width: 160px;
+    height:15%;
+    width: 10%;
 }
 
 #buttonloeschen,#buttonspeichern {
@@ -129,4 +128,3 @@ button {
 .button:hover {
     opacity: 0.5;
 }
-
