--- a/EIA2/Endabgabe-w20/CLIENT/stylesheet.css
+++ b/EIA2/Endabgabe-w20/CLIENT/stylesheet.css
@@ -125,7 +125,7 @@ button {
     margin-right: 3%;
 }
 
-.note{text-align: right; font-size: small}
+.note{text-align: right; font-size: small; color: silver;}
 
 .button:hover {
     opacity: 0.5;
